swagger for platforms
