# api/handlers.go
@@ -18,8 +18,9 @@ import (
 // @Produce json
 // @Tags platform,tx
 // @Param coin path string true "the coin name" default(tezos)
-// @Param address path string true "the address to get transactions" default(tz1WCd2jm4uSt4vntk4vSuUWoZQGhLcDuR9q)
+// @Param address path string true "the query address" default(tz1WCd2jm4uSt4vntk4vSuUWoZQGhLcDuR9q)
 // @Success 200 {object} blockatlas.TxPage
+// @Failure 500 {object} api.ApiError
 // @Router /v1/{coin}/{address} [get]
 func makeTxRouteV1(router gin.IRouter, api blockatlas.Platform) {
 	makeTxRoute(router, api, "/:address")
@@ -32,8 +33,9 @@ func makeTxRouteV1(router gin.IRouter, api blockatlas.Platform) {
 // @Produce json
 // @Tags platform,tx
 // @Param coin path string true "the coin name" default(tezos)
-// @Param address path string true "the address to get transactions" default(tz1WCd2jm4uSt4vntk4vSuUWoZQGhLcDuR9q)
+// @Param address path string true "the query address" default(tz1WCd2jm4uSt4vntk4vSuUWoZQGhLcDuR9q)
 // @Success 200 {object} blockatlas.TxPage
+// @Failure 500 {object} api.ApiError
 // @Router /v2/{coin}/transactions/{address} [get]
 func makeTxRouteV2(router gin.IRouter, api blockatlas.Platform) {
 	makeTxRoute(router, api, "/transactions/:address")
@@ -94,8 +96,9 @@ func makeTxRoute(router gin.IRouter, api blockatlas.Platform, path string) {
 // @Accept json
 // @Produce json
 // @Tags platform,staking
-// @Param coin path string true "the coin name" default(tezos)
+// @Param coin path string true "the coin name" default(cosmos)
 // @Success 200 {object} blockatlas.DocsResponse
+// @Failure 500 {object} api.ApiError
 // @Router /v2/{coin}/staking/validators [get]
 func makeStakingValidatorsRoute(router gin.IRouter, api blockatlas.Platform) {
 	var stakingAPI blockatlas.StakeAPI
@@ -116,15 +119,16 @@ func makeStakingValidatorsRoute(router gin.IRouter, api blockatlas.Platform) {
 	})
 }
 
-// @Description Get Transactions
-// @ID tx_v2
-// @Summary Get transactions from address
+// @Description Get Stake Delegations
+// @ID delegations
+// @Summary Get stake delegations from address
 // @Accept json
 // @Produce json
-// @Tags Tx
+// @Tags platform,staking
 // @Param coin path string true "the coin name" default(tron)
-// @Param address path string true "the address to get transactions" default(TPJYCz8ppZNyvw7pTwmjajcx4Kk1MmEUhD)
+// @Param address path string true "the query address" default(TPJYCz8ppZNyvw7pTwmjajcx4Kk1MmEUhD)
 // @Success 200 {object} blockatlas.DocsResponse
+// @Failure 500 {object} api.ApiError
 // @Router /v2/{coin}/staking/delegations/{address} [get]
 func makeStakingDelegationsRoute(router gin.IRouter, api blockatlas.Platform) {
 	var stakingAPI blockatlas.StakeAPI
@@ -146,6 +150,17 @@ func makeStakingDelegationsRoute(router gin.IRouter, api blockatlas.Platform) {
 	})
 }
 
+// @Description Get Collections
+// @ID collections
+// @Summary Get all collections from address
+// @Accept json
+// @Produce json
+// @Tags platform,collection
+// @Param coin path string true "the coin name" default(ethereum)
+// @Param address path string true "the query address" default(0x5574Cd97432cEd0D7Caf58ac3c4fEDB2061C98fB)
+// @Success 200 {object} blockatlas.CollectionPage
+// @Failure 500 {object} api.ApiError
+// @Router /v2/{coin}/collections/{address} [get]
 func makeCollectionsRoute(router gin.IRouter, api blockatlas.Platform) {
 	var collectionAPI blockatlas.CollectionAPI
 	collectionAPI, _ = api.(blockatlas.CollectionAPI)
@@ -165,6 +180,18 @@ func makeCollectionsRoute(router gin.IRouter, api blockatlas.Platform) {
 	})
 }
 
+// @Description Get Collection
+// @ID collection
+// @Summary Get a collection from address
+// @Accept json
+// @Produce json
+// @Tags platform,collection
+// @Param coin path string true "the coin name" default(ethereum)
+// @Param address path string true "the query address" default(0x0875BCab22dE3d02402bc38aEe4104e1239374a7)
+// @Param collection_id path string true "the query collection" default(0x06012c8cf97bead5deae237070f9587f8e7a266d)
+// @Success 200 {object} blockatlas.CollectionPage
+// @Failure 500 {object} api.ApiError
+// @Router /v2/{coin}/collections/{address}/collection/:collection_id [get]
 func makeCollectionRoute(router gin.IRouter, api blockatlas.Platform) {
 	var collectionAPI blockatlas.CollectionAPI
 	collectionAPI, _ = api.(blockatlas.CollectionAPI)
@@ -184,6 +211,17 @@ func makeCollectionRoute(router gin.IRouter, api blockatlas.Platform) {
 	})
 }
 
+// @Description Get Tokens
+// @ID tokens
+// @Summary Get tokens from address
+// @Accept json
+// @Produce json
+// @Tags platform,token
+// @Param coin path string true "the coin name" default(ethereum)
+// @Param address path string true "the query address" default(0x5574Cd97432cEd0D7Caf58ac3c4fEDB2061C98fB)
+// @Success 200 {object} blockatlas.CollectionPage
+// @Failure 500 {object} api.ApiError
+// @Router /v2/{coin}/tokens/{address} [get]
 func makeTokenRoute(router gin.IRouter, api blockatlas.Platform) {
 	var tokenAPI blockatlas.TokenAPI
 	tokenAPI, _ = api.(blockatlas.TokenAPI)
@@ -209,6 +247,11 @@ func makeTokenRoute(router gin.IRouter, api blockatlas.Platform) {
 	})
 }
 
+// @Description Get Metrics
+// @ID metrics
+// @Summary Get application metrics
+// @Tags metrics
+// @Router /metrics [get]
 func MakeMetricsRoute(router gin.IRouter) {
 	router.Use(metrics.PromMiddleware())
 	m := router.Group("/metrics")
